src/objects/Unit_of_Measure__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Is_Monthly__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Monthly?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Issue_Days__c</fullName>
        <description>List of days issued separated by comma. Ex. Monday,Tuesday,Wednesday. This is use in UsageHelper apex class.</description>
        <inlineHelpText>List of days issued separated by comma. Ex. Monday,Tuesday,Wednesday</inlineHelpText>
        <label>Issue Days</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Label__c</fullName>
        <label>Label</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Used_for__c</fullName>
        <label>Used for</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Unit of Measure</label>
</CustomObject>